docs/v1.0.1/_sources/gallery/tutorials/facs_canto.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/tutorials/facs_canto.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_tutorials_facs_canto.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_tutorials_facs_canto.py:


Flow Cytometry Simulation: FacsCanto System
============================================

This tutorial demonstrates how to set up and run a flow cytometry simulation using the FacsCanto instance from the FlowCyPy library.
It includes defining a particle population, configuring the flow cytometer, running the simulation, and visualizing the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-12

Step 0: Global Settings and Imports
-----------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 12-51

.. code-block:: Python

    from FlowCyPy.units import ureg
    from FlowCyPy.presets.flow_cytometer import FacsCanto, SampleFlowRate, SheathFlowRate
    from FlowCyPy.fluidics import populations, distributions


    diameter = distributions.RosinRammler(
        scale=60 * ureg.nanometer,
        shape=150,
    )

    medium_refractive_index = 1.33

    refractive_index = distributions.Normal(mean=1.44, standard_deviation=0.002)

    population_0 = populations.SpherePopulation(
        name="Pop 0",
        concentration=5e9 * ureg.particle / ureg.milliliter,
        diameter=diameter,
        medium_refractive_index=medium_refractive_index,
        refractive_index=refractive_index,
    )

    facs_canto = FacsCanto(
        sample_volume_flow=SampleFlowRate.MEDIUM.value,
        sheath_volume_flow=SheathFlowRate.DEFAULT.value,
        optical_power=200 * ureg.milliwatt,
        threshold="3sigma",
        include_shot_noise=True,
        include_rin_noise=True,
        background_power=0.01 * ureg.nanowatt,
    )

    facs_canto.add_population(population_0)

    facs_canto.dilute_sample(factor=100)

    run_record = facs_canto.run(run_time=0.2 * ureg.millisecond)

    run_record.plot_analog()



.. image-sg:: /gallery/tutorials/images/sphx_glr_facs_canto_001.png
   :alt: facs canto
   :srcset: /gallery/tutorials/images/sphx_glr_facs_canto_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    findfont: Font family ['cursive'] not found. Falling back to DejaVu Sans.
    findfont: Generic family 'cursive' not found because none of the following families were found: Apple Chancery, Textile, Zapf Chancery, Sand, Script MT, Felipa, Comic Neue, Comic Sans MS, cursive
    findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.
    findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.
    findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.

    <Figure size 640x480 with 3 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.321 seconds)


.. _sphx_glr_download_gallery_tutorials_facs_canto.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: facs_canto.ipynb <facs_canto.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: facs_canto.py <facs_canto.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: facs_canto.zip <facs_canto.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
